--- a/mistakes.html
+++ b/mistakes.html
@@ -27,19 +27,19 @@
 			<h1 class="logo">De-Bugged</h1>
 		</div>
 		<div class="onecol nab">
-		<a href="file:///Volumes/Macintosh%20HD/Users/Jaysian/Dropbox/Project/Code/index.html?" class="menu"><div class="link">Home</div></a>
+		<a href="index.html" class="menu"><div class="link">Home</div></a>
 		</div>
 		<div class="onecol nab">
 		<a href="#" class="menu"><div class="link">About</div></a>
 		</div>
 		<div class="onecol nab">
-		<a href="file:///Volumes/Macintosh%20HD/Users/Jaysian/Dropbox/Project/Code/mistakes.html" class="menu"><div class="link">Common Mistakes</div></a>
+		<a href="mistakes.html" class="menu"><div class="link">Common Mistakes</div></a>
 		</div>
 		<div class="onecol nab">
 		<a href="#" class="menu"><div class="link">Register</div></a>
 		</div>
 		<div class="onecol nab last">
-		<a href="file:///Volumes/Macintosh%20HD/Users/Jaysian/Dropbox/Project/Code/login.php" class="menu"><div class="link">Login</div></a>
+		<a href="login.php" class="menu"><div class="link">Login</div></a>
 		</div>
 		
 	</div>
