--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		<a href="/mistakes.html" class="menu"><div class="link">Common Mistakes</div></a>
 		</div>
 		<div class="onecol nab">
-		<a href="#" class="menu"><div class="link">Register</div></a>
+		<a href="register.php" class="menu"><div class="link">Register</div></a>
 		</div>
 		<div class="onecol nab last">
 		<a href="/login.php" class="menu"><div class="link">Login</div></a>
@@ -105,4 +105,6 @@
 
 </body>
 </html>
+
+
 
